tests/invalid/ArrayLength_Invalid_1.whiley

public export method test():
    int[] arr
    if 10 > 0:
        arr = [1, 2]
    else:
        arr = [1, 2, 3]
    assert |arr| == 4

